--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Portfolio de Nathan Plouvin — développeur web et étudiant en BUT Informatique." />
+    <title>Portfolio — Nathan Plouvin</title>
   </head>
   <!-- set initial theme to dark to avoid flash before JS sets it -->
   <body data-theme="dark">
     <div id="root"></div>
+    <noscript>Veuillez activer JavaScript pour voir ce site.</noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
